--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -82,7 +82,6 @@ input[type="password"]:focus::placeholder
     cursor: pointer;
 }
 
-
 .input_log { 
     width: 100%;
     height: 50px;
@@ -99,5 +98,9 @@ ul.fd_ul {
     padding: 0;
     text-align: center;
 }
-a { text-decoration: none;}
+a { text-decoration: none; color: inherit}
+.msg{
+    text-align: center;
+    margin-bottom: 20px;
+}
 
