--- a/src/main/webapp/resources/css/newMypage.css
+++ b/src/main/webapp/resources/css/newMypage.css
@@ -2,40 +2,37 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-
 }
 
 /* wrap 전체 영역 */
 #wrap {
     width: 100%;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding-top: 20px;
-
+    display: flex;
+    justify-content: center; /* 가로 중앙 정렬 */
+    padding-top: 20px; /* 상단에 여백 추가 (선택 사항) */
 }
 
 /* inner 컨테이너 */
 .inner {
     display: flex;
-
+    width: 1500px; /* inner의 너비를 설정 */
+    height: 350px;
+    min-width: 400px;
 }
 
 /* aside 스타일 */
 .aside {
-    width: 30%;
-    min-width: 360px;
+    width: 30%; /* aside의 너비 설정 */
     height: 100%;
-    margin-right: 20px;
+    min-width: 300px;
+    margin-right: 20px; /* aside와 main 사이의 간격 */
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     border-radius: 15px;
-    padding: 10px;
-
 }
 
 /* main 스타일 */
 .main {
-    width: calc(100% - 30% - 20px);
-    min-width: 820px;
+    width: 70%;
 }
 
 /* 각 박스 스타일 */
@@ -45,7 +42,10 @@ body {
     border: 1px solid #ddd;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     border-radius: 15px;
+}
 
+.box h2 {
+    margin: 0;
 }
 
 /* 프로필 이미지 */
@@ -54,18 +54,17 @@ body {
     height: 110px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid #ddd;
     border: 2px solid orange;
+    margin-top: 30px;
     margin-right: 30px;
 }
 
 /* 프로필 박스 */
 .aside_menu1 {
     display: flex;
-    flex-wrap: nowrap;
+    justify-content: center;
     align-items: center;
     font-weight: 600;
-
 }
 
 /* 프로필 메뉴 */
@@ -75,7 +74,6 @@ body {
 
 .profile_menu > div {
     margin-bottom: 2px;
-
 }
 
 /* 인증 정보 박스 */
@@ -83,25 +81,24 @@ body {
     display: flex;
     justify-content: center;
     font-weight: 600;
-
 }
 
 .check_menu, .check_list {
     margin-bottom: 10px;
 }
 
-h3 { margin-left: 30px;}
+h3 {
+    margin-left: 30px;
+}
 
 .menu2_head {
     margin-left: 45px;
-
 }
 
 /* 정보 메뉴 */
 .ctf_checkBox1 {
     padding: 0;
     margin: 0;
-
 }
 
 .ctf_checkBox2 {
@@ -121,6 +118,7 @@ h3 { margin-left: 30px;}
 .btn_mok:hover {
     background-color: rgb(255, 194, 81);
 }
+
 /* Ul */
 ul {
     list-style: none;
@@ -134,7 +132,6 @@ ul {
     border-radius: 5px;
     padding: 5px;
     cursor: pointer;
-    border: none;
     border: 1px solid;
     background-color: rgb(247, 172, 32);
     color: #fff;
@@ -146,19 +143,19 @@ ul {
 /* 프로필 본인소개 */
 .text_area {
     border: 1px solid;
-    width: 500px;
+    width: 50%;
     height: 50px;
     margin-top: 10px;
     border-radius: 5px;
     background-color: rgb(231, 231, 231);
-
+    overflow: hidden;
+    min-width: 300px;
 }
 
 /* 내가 찜한 음식점 */
 .box2_head {
     position: relative;
-    min-width: 815px;
-
+    height: 50px; /* 높이를 조금 높임 */
 }
 
 .box2_head > a {
@@ -167,99 +164,66 @@ ul {
     top: 0;
 }
 
-/* 음식점 상세 박스 */
-.box2_head > a >input {
+.box2_head > a > input {
     width: 100px;
     height: 25px;
 }
+
+/* 음식점 상세 박스 */
 .contents_area {
-    height: 100%;
     display: flex;
-    /* border: 1px solid; */
-    justify-content: space-between;
-
-
-}
-.contentsBox {
-    /* border: 1px solid; */
-    width: 390px;
-    height: 280px;
-    border-radius: 15px;
-    border: 1px solid;
-
-    display: flex;
-    justify-content: center;
-
-    /* align-items: center;  */
-    flex-wrap:nowrap;
-
-    position: relative;
-    margin-right: 10px;
-
-
-}
-.etc1 {
-    /* display: flex; */
-}
-
-/* 음식점 이미지 박스  */
-.menu_img {
-    border: 1px solid;
-    width: 170px;
-    height: 170px;
-    border-radius: 15px;
-    margin-left: 10px;
-    margin-top: 30px;
-
-}
-.menu1 {
-
-
-}
-/* 메뉴 정보 */
-.menu_infor {
-    font-size: 20px;
-    font-weight: 700;
-    width: 230px;
-    height: 140px;
-    padding-left: 20px;
-    margin-top: 50px;
-
-}
-
-.txt {
-    margin-bottom: 20px;
-    width: 100%;
-    height: 35px;
+    flex-wrap: wrap; /* 박스가 넘치면 다음 줄로 이동 */
+    gap: 20px; /* 박스 간 간격 */
+    justify-content: center; /* 가운데 정렬 */
+    align-items: flex-start;
+    padding: 20px; /* 내부 여백 */
     box-sizing: border-box;
-    /*overflow: hidden;*/
-
 }
 
-.stimg img {
-    width: 30px;
+.contentsBox {
+    flex: 0 1 calc(45% - 20px); /* 각 박스가 45% 너비를 차지 */
+    max-width: 400px; /* 최대 너비 제한 */
+    min-width: 250px; /* 최소 너비 설정 */
+    height: 450px; /* 높이를 조금 더 높게 */
+    border: 1px solid #000; /* 테두리 추가 */
+    border-radius: 15px; /* 모서리 둥글게 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 20px;
+    text-align: center;
+    background-color: #f9f9f9; /* 약간 밝은 배경색 */
 }
 
-/* 주소 */
-.address {
-    border: 1px solid;
+/* 사진 상자 */
+.menu_img {
+    width: 180px; /* 사진 크기 */
+    height: 180px;
+    border: 1px solid #ddd;
     border-radius: 10px;
-    width: 200px;
-    height: 20px;
-    overflow: hidden;
-    padding-left: 15px;
-    position: absolute;
-    bottom: 5px;
+    object-fit: cover; /* 사진 비율 유지 */
+    margin-bottom: 15px; /* 아래 내용과 간격 */
+    background-color: #eaeaea; /* 이미지가 없을 경우 기본 배경 */
 }
+
+/* '정보 없음' 텍스트 */
+.null_txt {
+    font-size: 16px;
+    color: #777;
+    margin-top: 10px;
+    text-align: center;
+}
+
 /* 리뷰 박스 */
 .review_box {
     border: 1px solid;
-    width: 390px;
+    width: 500px;
     height: 100px;
     border-radius: 15px;
-    margin-right: 10px;
-    min-width: 390px;
-
+    margin-right: 15px;
+    min-width: 300px;
 }
 
 .review_head {
@@ -269,6 +233,7 @@ ul {
     margin-bottom: 5px;
     margin-top: 5px;
 }
+
 .name {
     font-weight: bold;
     margin-left: 30px;
@@ -284,7 +249,6 @@ ul {
     margin: 0 auto;
     background-color: rgb(231, 231, 231);
     border-radius: 10px;
-
 }
 
 .big_pan {
