--- a/src/main/webapp/resources/css/review_page_2.css
+++ b/src/main/webapp/resources/css/review_page_2.css
@@ -1,10 +1,11 @@
 .img_box {
-    height: 300px;
+    height: 250px;
     overflow-x: scroll;
 
     position: relative;
 
     display: flex;
+    align-items: center;
 }
 .img_box.hover {
     opacity: 0.5;
