--- a/src/main/webapp/resources/css/myPage.css
+++ b/src/main/webapp/resources/css/myPage.css
@@ -8,34 +8,34 @@ body {
 /* wrap 전체 영역 */
 #wrap {
     width: 100%;
-    display: flex;
-    justify-content: center; /* 가로 중앙 정렬 */
-    padding-top: 20px; /* 상단에 여백 추가 (선택 사항) */
-
+    margin: 0 auto;
+    max-width: 1200px;
+    padding-top: 20px; 
+    
 }
 
 /* inner 컨테이너 */
 .inner {
     display: flex;
-    width: 1500px; /* inner의 너비를 설정 (예: 80%로 설정) */
-    height: 350px;
-    min-width: 400px;
+
 }
 
 /* aside 스타일 */
 .aside {
-    width: 30%; /* aside의 너비 설정 */
+    width: 30%; 
+    min-width: 360px;
     height: 100%;
-    min-width: 300px;
-    margin-right: 20px; /* aside와 main 사이의 간격 */
+    margin-right: 20px; 
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     border-radius: 15px;
-
+    padding: 10px;
+    
 }
 
 /* main 스타일 */
 .main {
-    width: 70%;
+    width: calc(100% - 30% - 20px);
+    min-width: 820px;
 }
 
 /* 각 박스 스타일 */
@@ -45,12 +45,7 @@ body {
     border: 1px solid #ddd;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     border-radius: 15px;
-
-}
-
-.box h2 {
-    margin-top: 0;
-    margin: 0;
+    
 }
 
 /* 프로필 이미지 */
@@ -61,14 +56,13 @@ body {
     object-fit: cover;
     border: 2px solid #ddd;
     border: 2px solid orange;
-    margin-top: 30px;
     margin-right: 30px;
 }
 
 /* 프로필 박스 */
 .aside_menu1 {
     display: flex;
-    justify-content: center;
+    flex-wrap: nowrap;
     align-items: center;
     font-weight: 600;
 
@@ -81,7 +75,7 @@ body {
 
 .profile_menu > div {
     margin-bottom: 2px;
-
+    
 }
 
 /* 인증 정보 박스 */
@@ -152,18 +146,18 @@ ul {
 /* 프로필 본인소개 */
 .text_area {
     border: 1px solid;
-    width: 50%;
+    width: 500px;
     height: 50px;
     margin-top: 10px;
     border-radius: 5px;
     background-color: rgb(231, 231, 231);
-    overflow: hidden;
-    min-width: 300px;
+
 }
 
 /* 내가 찜한 음식점 */
 .box2_head {
     position: relative;
+    min-width: 815px;
 
 }
 
@@ -179,40 +173,48 @@ ul {
     height: 25px;
 }
 .contents_area {
-    height: 300px;
-    overflow: hidden;
+    height: 100%;
     display: flex;
+    /* border: 1px solid; */
+    justify-content: space-between;
+    
 
 }
 .contentsBox {
-    border: 1px solid;
-    width: 500px;
+    /* border: 1px solid; */
+    width: 390px;
     height: 280px;
     border-radius: 15px;
-    margin-right: 10px;
-    min-width: 500px;
-
+    border: 1px solid;
+    
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-
+    justify-content: center; 
+    
+    /* align-items: center;  */
+    flex-wrap:nowrap;
+    
+    position: relative;
+    margin-right: 10px;
+    
+    
 }
 .etc1 {
-    display: flex;
-}
+    /* display: flex; */
+} 
 
 /* 음식점 이미지 박스  */
 .menu_img {
     border: 1px solid;
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
     border-radius: 15px;
-
+    margin-left: 10px;
+    margin-top: 30px;
+    
 }
 .menu1 {
-
-
+    
+    
 }
 /* 메뉴 정보 */
 .menu_infor {
@@ -221,7 +223,8 @@ ul {
     width: 230px;
     height: 140px;
     padding-left: 20px;
-
+    margin-top: 50px;
+    
 }
 
 .txt {
@@ -245,16 +248,18 @@ ul {
     height: 20px;
     overflow: hidden;
     padding-left: 15px;
+    position: absolute;
+    bottom: 5px;
 }
-
 /* 리뷰 박스 */
 .review_box {
     border: 1px solid;
-    width: 500px;
+    width: 390px;
     height: 100px;
     border-radius: 15px;
-    margin-right: 15px;
-    min-width: 300px;
+    margin-right: 10px;
+    min-width: 390px;
+
 }
 
 .review_head {
@@ -279,15 +284,9 @@ ul {
     margin: 0 auto;
     background-color: rgb(231, 231, 231);
     border-radius: 10px;
-
+    
 }
 
 .big_pan {
     display: flex;
 }
-/*.null_txt{*/
-/*    width: 100% !important;*/
-/*    text-align: center !important;*/
-/*    margin-top: 100px !important;*/
-/*    color: red !important;*/
-/*}*/
