--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -48,6 +48,11 @@ body {
     
 }
 
+.box1_headname {
+    font-weight: 700;
+    font-size: 20px;
+}
+
 /* 프로필 이미지 */
 .profile_img {
     width: 110px;
@@ -90,7 +95,7 @@ body {
     margin-bottom: 10px;
 }
 
-h3 { margin-left: 30px;}
+
 
 .menu2_head {
     margin-left: 45px;
@@ -156,27 +161,28 @@ ul {
 
 /* 내가 찜한 음식점 */
 .box2_head {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
     min-width: 815px;
 
 }
 
-.box2_head > a {
-    position: absolute;
-    right: 0;
-    top: 0;
+.box2_headname {
+    font-weight: 700;
+    font-size: 20px;
 }
 
 /* 음식점 상세 박스 */
 .box2_head > a >input {
     width: 100px;
     height: 25px;
+   
 }
 .contents_area {
     height: 100%;
     display: flex;
     /* border: 1px solid; */
-    justify-content: space-between;
+    align-items: center;
     
 
 }
@@ -185,31 +191,24 @@ ul {
     width: 390px;
     height: 280px;
     border-radius: 15px;
-    border: 1px solid;
     
-    display: flex;
-    justify-content: center; 
+    /* display: flex; */
+    /* justify-content: center;  */
     
     /* align-items: center;  */
-    flex-wrap:nowrap;
-    
-    position: relative;
+    flex-wrap: nowrap;
     margin-right: 10px;
     
     
 }
-.etc1 {
-    /* display: flex; */
-} 
 
 /* 음식점 이미지 박스  */
 .menu_img {
     border: 1px solid;
-    width: 170px;
-    height: 170px;
+    width: 100%;
+    height: 100%;
     border-radius: 15px;
-    margin-left: 10px;
-    margin-top: 30px;
+    overflow: hidden;
     
 }
 .menu1 {
@@ -218,21 +217,22 @@ ul {
 }
 /* 메뉴 정보 */
 .menu_infor {
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 700;
     width: 230px;
     height: 140px;
     padding-left: 20px;
-    margin-top: 50px;
+    /* border: 1px solid; */
+    align-items: center;
     
 }
 
 .txt {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     width: 100%;
     height: 35px;
     box-sizing: border-box;
-    overflow: hidden;
+    margin-bottom: 5px;
 
 }
 
@@ -248,12 +248,12 @@ ul {
     height: 20px;
     overflow: hidden;
     padding-left: 15px;
-    position: absolute;
-    bottom: 5px;
+    margin-top: 10px;
+    font-size: 15px;
+    
 }
 /* 리뷰 박스 */
 .review_box {
-    border: 1px solid;
     width: 390px;
     height: 100px;
     border-radius: 15px;
@@ -264,7 +264,6 @@ ul {
 
 .review_head {
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -275,7 +274,8 @@ ul {
 }
 
 .time {
-    margin-right: 30px;
+    margin-left: 15px;
+    margin-top: 5px;
 }
 
 .review_txt {
@@ -289,4 +289,38 @@ ul {
 
 .big_pan {
     display: flex;
+}
+
+.review_txt > input {
+    width: 100%;
+    height: 100%;
+    padding-left: 10px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: rgb(231, 231, 231);
+    outline: none;
+    border: none;
+}
+
+/* 3번 헤드 name,btn */
+.review_headbox {
+    display: flex;
+    justify-content: space-between;
+}
+
+.head_name {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.btn_head3 {
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    background-color: orange;
+    border: none;
+    color: #fff;
+}
+.btn_head3:hover {
+    background-color: rgb(255, 194, 81);;
 }
