마이페이지 상세페이지 작업

--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -145,6 +145,16 @@ input[type="radio"]:checked + label:hover {
     background-color: orange;
     color: #fff;
 }
+/* 수정, 취소 버튼*/
+.btn_sum1{
+    width: 45%;
+    float: left;
+}
+.btn_sum2{
+    width: 45%;
+    float: right;
+}
+
 .my {
     margin-bottom: 5px;
 }
