--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -179,6 +179,7 @@ ul {
    
 }
 .contents_area {
+
     height: 100%;
     display: flex;
     /* border: 1px solid; */
@@ -187,9 +188,11 @@ ul {
 
 }
 .contentsBox {
+    border: 1px solid;
+    padding: 30px;
     /* border: 1px solid; */
     width: 390px;
-    height: 280px;
+    /*height: 280px;*/
     border-radius: 15px;
     
     /* display: flex; */
@@ -216,16 +219,26 @@ ul {
     
 }
 /* 메뉴 정보 */
-.menu_infor {
+/*.menu_infor {*/
+/*    font-size: 17px;*/
+/*    font-weight: 700;*/
+/*    width: 230px;*/
+/*    height: 140px;*/
+/*    padding-left: 20px;*/
+/*    !* border: 1px solid; *!*/
+/*    align-items: center;*/
+/*    */
+/*}*/
+
+menu_infor {
     font-size: 17px;
     font-weight: 700;
-    width: 230px;
-    height: 140px;
-    padding-left: 20px;
-    /* border: 1px solid; */
+    padding: 20px;
+    border: 1px solid;
+    border-radius: 7px;
     align-items: center;
-    
 }
+
 
 .txt {
     /* margin-bottom: 20px; */
