--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -293,3 +293,40 @@ body::-webkit-scrollbar {
     height: auto;
     background: #e3e3e3;
 }
+
+.move_top {
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 0 2px 2px #ababab;
+
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+
+    transition: all 0.3s;
+}
+.move_top > svg {
+    width: 30px;
+    height: 30px;
+    transform: rotateZ(180deg);
+
+    position: relative;
+    top: 1px;
+}
+.move_top:hover {
+    color: #ff9625;
+}
+.move_top:hover > svg {
+    fill: #ff9625;
+}
