--- a/src/main/webapp/resources/css/detail.css
+++ b/src/main/webapp/resources/css/detail.css
@@ -578,6 +578,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    /*display: none;*/
 }
 .rev_con_main_box {
     width: 100%;
@@ -587,8 +588,9 @@
     box-sizing: border-box;
     position: relative;
 
-    display: flex;
+    /*display: flex;*/
     flex-wrap: wrap;
+    display: none;
 }
 .rev_con_more_btn {
     width: 100%;
