--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -770,3 +770,33 @@ input {
     opacity: 1;
     cursor: pointer;
 }
+
+/*수정, 삭제 추가사항*/
+
+.no_search_box {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+.no_search_img {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 10px;
+}
+.no_search_box > p {
+    width: 100%;
+}
+.no_search_main {
+    font-size: 20px;
+    color: #585858;
+    margin-bottom: 20px;
+}
+.no_search_sub {
+    font-size: 14px;
+    color: #a9a9a9;
+}
