리뷰 수정-삭제

--- a/src/main/webapp/resources/css/list_page_restaurant.css
+++ b/src/main/webapp/resources/css/list_page_restaurant.css
@@ -256,6 +256,11 @@
 .banner_img {
     height: 100%;
     border-radius: 15px;
+    overflow: hidden;
+}
+
+.banner_img > img{
+    height: 100%;
 }
 
 .banner_btn_L, .banner_btn_R {
