--- a/src/main/webapp/resources/css/detail.css
+++ b/src/main/webapp/resources/css/detail.css
@@ -357,8 +357,8 @@
     height: auto;
 
     position: absolute;
-    right: 60px;
-
+    top: 106%;
+    left: 0;
 }
 #reco_container > .container_title > p:first-child {
     color: #ff9625;
