--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -23,6 +23,30 @@
 body {
     margin: 0;
 }
+.photo_view {
+    overflow: hidden;
+}
+.photo_viewer {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.9);
+
+    position: fixed;
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 999999;
+}
+.photo_viewer > img {
+    width: 80%;
+    height: 80%;
+    object-fit: contain;
+}
+.photo_active {
+    display: flex;
+}
 ul {
     list-style: none;
     padding: 0;
@@ -81,7 +105,7 @@ body::-webkit-scrollbar {
     height: 115px;
     background: #fff;
     box-shadow: 0 2px 5px 0 #bdbdbd;
-
+    
     position: fixed;
     top: 0;
     left: 0;
@@ -248,7 +272,7 @@ body::-webkit-scrollbar {
     position: relative;
 
     transition: box-shadow 0.1s;
-
+    
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -350,14 +374,12 @@ body::-webkit-scrollbar {
 .break_time { color: #8a8a8a; display: block;}
 .close_time { color: #ff0000; display: block;}
 
-/*수정, 삭제 버튼 추가사항*/
-
 .review_edit_delete {
     width: 100%;
     margin-top: 10px;
     padding-right: 5px;
     box-sizing: border-box;
-
+    
     font-size: 16px;
     font-weight: 600;
     color: #6e6e6e;
@@ -372,27 +394,59 @@ body::-webkit-scrollbar {
     margin: 0 5px;
 }
 
-.photo_view {
-    overflow: hidden;
-}
-.photo_viewer {
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.9);
 
-    position: fixed;
+@media screen and (min-width: 850px) and (max-width: 1250px) {
 
-    display: none;
-    justify-content: center;
-    align-items: center;
+    .contents_area {
+        width: 800px;
+        min-width: 600px;
+    }
+    .logo_box {
+        width: 200px;
+    }
+    .guest_box {
+        width: 100px;
+        justify-content: flex-end;
+    }
+    .guest_box > a {
+        display: none;
+    }
 
-    z-index: 999999;
 }
-.photo_viewer > img {
-    width: 80%;
-    height: 80%;
-    object-fit: contain;
-}
-.photo_active {
-    display: flex;
+
+
+@media screen and (min-width: 0px) and (max-width: 850px) {
+
+    .event_box {
+        width: 100% !important;
+    }
+    .contents_area {
+        width: 450px;
+        min-width: 300px;
+    }
+    .logo_box {
+        width: 200px;
+    }
+    .guest_box {
+        width: 100px;
+        justify-content: flex-end;
+    }
+    .guest_box > a {
+        display: none;
+    }
+    .search_box {
+        display: none;
+    }
+    .move_top {
+        width: 50px;
+        height: 50px;
+        right: 10px;
+        bottom: 10px;
+
+        flex-direction: column;
+    }
+    .move_top > p {
+        display: none;
+    }
+
 }
