--- a/src/main/webapp/resources/css/list_page_restaurant.css
+++ b/src/main/webapp/resources/css/list_page_restaurant.css
@@ -19,43 +19,6 @@
     font-size: 34px;
 }
 
-.move_top {
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 0 2px 2px #ababab;
-
-    font-size: 20px;
-    cursor: pointer;
-    opacity: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 3px;
-
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-
-    transition: all 0.3s;
-}
-.move_top > svg {
-    width: 30px;
-    height: 30px;
-    transform: rotateZ(180deg);
-
-    position: relative;
-    top: 1px;
-}
-.move_top:hover {
-    color: #ff9625;
-}
-.move_top:hover > svg {
-    fill: #ff9625;
-}
-
 /* container_main 단 */
 
 .main_box {
@@ -90,7 +53,7 @@
 /*  */
 .review_box {
     width: 300px;
-    height: 100%;
+    height: 60%;
 
     position: absolute;
     top: 0px;
@@ -224,21 +187,6 @@
     position: relative;
     top: -5px;
 }
-.open_time, .break_time, .close_time {
-    font-size: 20px;
-    display: none;
-    margin-left: 5px;
-
-    position: relative;
-    top: -5px;
-}
-.open_time { color: #ff9625; display: block;}
-.break_time { color: #10bb00; }
-.close_time { color: #ff0000; }
-
-.day_box > p:last-child {
-    margin-top: 10px;
-}
 
 /* ////////////////           swiper (banner)          //////////// */
 
@@ -256,11 +204,6 @@
 .banner_img {
     height: 100%;
     border-radius: 15px;
-    overflow: hidden;
-}
-
-.banner_img > img{
-    height: 100%;
 }
 
 .banner_btn_L, .banner_btn_R {
@@ -298,4 +241,67 @@
 .swiper-button-next0 {
     background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0));
     right: 0;
+}
+
+.empty_box {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #5b5b5b;
+    padding: 100px 0;
+}
+.empty_icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 25px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 1250px) {
+    .container_banner {
+        height: 250px;
+    }
+    .main_box {
+        width: 100%;
+    }
+    .rest_title {
+        font-size: 24px;
+        width: auto;
+        max-width: 400px;
+    }
+    .rest_cate {
+        position: relative;
+        top: -4px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 850px) {
+    .container_banner {
+        height: 200px;
+    }
+    .rest_title {
+        font-size: 20px;
+        max-width: 180px;
+    }
+    .rest_title_box {
+        width: 260px;
+    }
+    .review_box {
+        width: 200px;
+        
+        position: absolute;
+        top: -5px;
+        right: 0px;
+    }
+    .rest_intro {
+        padding: 15px 20px;
+    }
+    .rest_info_box {
+        font-size: 15px;
+    }
+    .rest_cate {
+        position: relative;
+        top: -8px;
+        font-size: 16px;
+    }
 }
