--- a/src/main/webapp/resources/css/list_page_review.css
+++ b/src/main/webapp/resources/css/list_page_review.css
@@ -36,43 +36,6 @@
     padding: 20px;
 }
 
-.move_top {
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 0 2px 2px #ababab;
-
-    font-size: 20px;
-    cursor: pointer;
-    opacity: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 3px;
-
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-
-    transition: all 0.3s;
-}
-.move_top > svg {
-    width: 30px;
-    height: 30px;
-    transform: rotateZ(180deg);
-
-    position: relative;
-    top: 1px;
-}
-.move_top:hover {
-    color: #ff9625;
-}
-.move_top:hover > svg {
-    fill: #ff9625;
-}
-
 /*  //////////////////////////////////////////////////   */
 
 
@@ -81,7 +44,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
 }
 .rev_con_main_box {
     width: 100%;
@@ -155,11 +117,18 @@
 }
 .rc_img_box {
     width: 100%;
-    height: 177px;
+    height: 190px;
+    overflow: hidden;
+}
+.rc_img_box:hover{
+    overflow-x: auto;
+}
+.rc_img_box_scroll {
+    width: max-content;
+    height: auto;
 
     display: flex;
     gap: 10px;
-
 }
 .re_menu_box {
     width: 100%;
@@ -168,6 +137,7 @@
     font-size: 14px;
 
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
 }
 .review_menu {
@@ -176,15 +146,21 @@
     background: #e1e1e1;
 }
 .review_img {
-    width: calc(100% / 4);
-    height: 100%;
+    width: 177px;
+    height: 177px;
     background: #d99b9b;
     border-radius: 5px;
+    overflow: hidden;
 
     text-align: center;
     line-height: 180px;
     font-size: 25px;
-
+}
+.more_img {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 .one_star {
@@ -200,3 +176,24 @@
     color: #ff9625;
     font-weight: 900;
 }
+
+.more_img {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    cursor: pointer;
+}
+
+.empty_box {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #5b5b5b;
+    padding: 100px 0;
+}
+.empty_icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 25px;
+}
+
