--- a/src/main/webapp/resources/css/rank_page_score.css
+++ b/src/main/webapp/resources/css/rank_page_score.css
@@ -95,13 +95,11 @@
 .review_leng {
     padding-top: 6px;
     color: #5e5e5e;
-    cursor: pointer;
 
     display: flex;
     justify-content: flex-end;
 }
 .fill_star, .rev_fill_star, .reco_fill_star {
-    width: 97%;
     height: 25px;
     background: url(../img/review_star_fill.png) repeat-x left;
     background-size: 29px;
@@ -116,6 +114,7 @@
 }
 
 .rest_title_box {
+    width: 500px;
     margin-bottom: 5px;
 
     display: flex;
@@ -123,6 +122,7 @@
     gap: 15px;
 }
 .rest_title {
+    width: 450px;
     font-size: 30px;
     font-weight: 900;
     position: relative;
@@ -196,17 +196,6 @@
     position: relative;
     top: -5px;
 }
-.open_time, .break_time, .close_time {
-    font-size: 20px;
-    display: none;
-    margin-left: 5px;
-
-    position: relative;
-    top: -5px;
-}
-.open_time { color: #ff9625; display: block;}
-.break_time { color: #bcbcbc; display: block}
-.close_time { color: #ff0000; display: block}
 
 .day_box > p:last-child {
     margin-top: 10px;
@@ -265,4 +254,54 @@
 .swiper-button-next0 {
     background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0));
     right: 0;
+}
+
+@media screen and (min-width: 0px) and (max-width: 1250px) {
+    .container_banner {
+        height: 250px;
+    }
+    .main_box {
+        width: 100%;
+    }
+    .rest_title {
+        font-size: 24px;
+        width: auto;
+        max-width: 400px;
+    }
+    .rest_cate {
+        position: relative;
+        top: -4px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 850px) {
+    .container_banner {
+        height: 200px;
+    }
+    .rest_title {
+        font-size: 20px;
+        max-width: 180px;
+    }
+    .rest_title_box {
+        width: 260px;
+    }
+    .review_box {
+        width: 200px;
+        
+        position: absolute;
+        top: -5px;
+        right: 0px;
+    }
+    .rest_intro {
+        padding: 15px 20px;
+    }
+    .rest_info_box {
+        font-size: 15px;
+    }
+    .rest_cate {
+        position: relative;
+        top: -8px;
+        font-size: 16px;
+    }
 }
