--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
+}
+
 .container {
     width: 500px;
     min-height: 600px;
@@ -34,7 +38,7 @@ input:focus {
 
 
 .input_txt1 {       /* 이름,나이 각각 */
-    width: 50%;
+    width: calc(50% - 5px);
     height: 50px;
     border-radius: 5px;
     box-sizing: border-box;
@@ -145,16 +149,6 @@ input[type="radio"]:checked + label:hover {
     background-color: orange;
     color: #fff;
 }
-/* 수정, 취소 버튼*/
-.btn_sum1{
-    width: 45%;
-    float: left;
-}
-.btn_sum2{
-    width: 45%;
-    float: right;
-}
-
 .my {
     margin-bottom: 5px;
 }
@@ -162,10 +156,19 @@ input[type="radio"]:checked + label:hover {
     width: 100%;
     outline: none;
     border: none;
-    font-size: 20px;
-    background-color: #e0e0e0;
-
+    font-size: 14px;
+    background-color: transparent;
 }
 .intro_txt:focus {
     background-color: #e0e0;
+}
+.reg_btn_box {
+    display: flex;
+    gap: 10px;
+}
+.form_input_box {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    gap: 10px;
 }
