--- a/src/main/webapp/resources/css/review_common.css
+++ b/src/main/webapp/resources/css/review_common.css
@@ -31,11 +31,6 @@ input {
     height: 100%;
     position: relative;
 }
-#wrap2{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
 .contents_area {
     width: 800px;
     min-width: 800px;
@@ -103,3 +98,5 @@ fieldset {
     width: 100%;
     font-weight: 700;
 }
+
+/* 본문 container 부분 */
