--- a/src/main/webapp/resources/css/review_page_2.css
+++ b/src/main/webapp/resources/css/review_page_2.css
@@ -1,22 +1,22 @@
-.img_box {
-    height: 250px;
-    overflow-x: scroll;
+#img_box {
+    height: 300px;
+    overflow-x: auto;
 
     position: relative;
 
     display: flex;
     align-items: center;
 }
-.img_box.hover {
+#img_box.hover {
     opacity: 0.5;
 }
-.img_box > p {
+#img_box > p {
     width: 100%;
     text-align: center;
     font-size: 20px;
     margin-bottom: 30px;
 }
-.img_box > p {
+#img_box > p {
     position: absolute;
     top: 30%;
     left: 50%;
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
 }
-.img_box > input {
+#img_box > input {
     display: none;
 }
 
